@@ -50,6 +50,7 @@ version 1.4.1
 7745							: rename multiple bug
 7749							: Doc update for some 1.4.0 features
 7758							: properties menu setting
+7760							: /line:XXX to Blame, improve issue #214
 
 version 1.4.0
 7198							: Remove Win64 property to work with latest WiX
